--- a/pokedex/pokedex-ear/.settings/org.eclipse.wst.common.component
+++ b/pokedex/pokedex-ear/.settings/org.eclipse.wst.common.component
@@ -62,6 +62,9 @@
         <dependent-module archiveName="wildfly-transaction-client.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/org/wildfly/transaction/wildfly-transaction-client/1.1.10.Final/wildfly-transaction-client-1.1.10.Final.jar">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="jboss-jms-api_2.0_spec.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/org/jboss/spec/javax/jms/jboss-jms-api_2.0_spec/2.0.0.Final/jboss-jms-api_2.0_spec-2.0.0.Final.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <dependent-module archiveName="pokedex-web.war" deploy-path="/" handle="module:/resource/pokedex-web/pokedex-web">
             <dependency-type>uses</dependency-type>
         </dependent-module>
