--- a/pokedex/pokedex-ear/.settings/org.eclipse.wst.common.component
+++ b/pokedex/pokedex-ear/.settings/org.eclipse.wst.common.component
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-            
+                
+    
     
     <wb-module deploy-name="pokedex">
-                        
+                                
+        
         
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/ear-resources"/>
-                        
+                                
+        
         
         <wb-resource deploy-path="/" source-path="/src/main/application" tag="defaultRootSource"/>
         <dependent-module archiveName="pokedex-ejb.jar" deploy-path="/" handle="module:/resource/pokedex-ejb/pokedex-ejb">
@@ -65,12 +68,56 @@
         <dependent-module archiveName="jboss-jms-api_2.0_spec.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/org/jboss/spec/javax/jms/jboss-jms-api_2.0_spec/2.0.0.Final/jboss-jms-api_2.0_spec-2.0.0.Final.jar">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="wildfly-client-properties.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/org/wildfly/wildfly-client-properties/21.0.0.Final/wildfly-client-properties-21.0.0.Final.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="netty-all.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/io/netty/netty-all/4.1.51.Final/netty-all-4.1.51.Final.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="artemis-hqclient-protocol.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/org/apache/activemq/artemis-hqclient-protocol/2.10.1/artemis-hqclient-protocol-2.10.1.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="artemis-core-client.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/org/apache/activemq/artemis-core-client/2.10.1/artemis-core-client-2.10.1.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="jgroups.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/org/jgroups/jgroups/4.2.5.Final/jgroups-4.2.5.Final.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="artemis-commons.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/org/apache/activemq/artemis-commons/2.10.1/artemis-commons-2.10.1.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="commons-beanutils.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/commons-beanutils/commons-beanutils/1.9.4/commons-beanutils-1.9.4.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="commons-collections.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/commons-collections/commons-collections/3.2.2/commons-collections-3.2.2.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="artemis-jms-client.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/org/apache/activemq/artemis-jms-client/2.10.1/artemis-jms-client-2.10.1.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="artemis-selector.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/org/apache/activemq/artemis-selector/2.10.1/artemis-selector-2.10.1.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="jakarta.json-api.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/jakarta/json/jakarta.json-api/1.1.6/jakarta.json-api-1.1.6.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="jakarta.json.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/org/glassfish/jakarta.json/1.1.6/jakarta.json-1.1.6.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="jcl-over-slf4j.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/org/slf4j/jcl-over-slf4j/1.7.30/jcl-over-slf4j-1.7.30.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="slf4j-api.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/org/slf4j/slf4j-api/1.7.30/slf4j-api-1.7.30.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <dependent-module archiveName="pokedex-web.war" deploy-path="/" handle="module:/resource/pokedex-web/pokedex-web">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-                    
+                            
+    
     
     </wb-module>
-        
+            
+
 
 </project-modules>
