--- a/pokedex/pokedex-web/src/ngfrontend/src/app/app.component.html
+++ b/pokedex/pokedex-web/src/ngfrontend/src/app/app.component.html
@@ -26,190 +26,104 @@
 
 
 
-    <!-- Page Wrapper -->
-    <div id="wrapper">
+<!-- Page Wrapper -->
+<div id="wrapper">
 
-      <!-- Sidebar -->
-      <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+    <!-- Sidebar -->
+    <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
-          <!-- Sidebar - Brand -->
-          <a class="sidebar-brand d-flex align-items-center justify-content-center" [routerLink]="['/user-pokemons']">
-           
-
-             <div class="sidebar-brand-icon rotate-n-15">
-                   <!-- <i class="fas fa-laugh-wink"></i>-->
-                 
-
-              </div> 
-              <div class="sidebar-brand-text mx-3 pokemon-font"><i style="font-size:40px" class="pkmn pkmn-025-pikachu"></i>&nbsp;My&nbsp;Pokedex</div>
-          </a>
+        <!-- Sidebar - Brand -->
+        <a class="sidebar-brand d-flex align-items-center justify-content-center" [routerLink]="['/full-pokedex']"  style="text-transform: none; letter-spacing: 0.25rem; height:5rem; ">
+            <div class="sidebar-brand-icon rotate-n-15">
+                <!-- <i class="fas fa-laugh-wink"></i>-->
+                <i style="font-size:50px" class="pkmn pkmn-025-pikachu" ></i>
+            </div>
+            <div class="sidebar-brand-text mx-3 pokemon-font" style="margin: 0 0 0 0rem !important; font-size:22px">MyPokédex</div>
+        </a>
 
 
-          <!-- Divider -->
-          <hr class="sidebar-divider my-0">
+        <!-- Divider -->
+        <hr class="sidebar-divider my-0">
 
-          <!-- Nav Item - Dashboard -->
-          <li class="nav-item active">
-              <a class="nav-link" href="index.html">
-                  <i class="fas fa-fw fa-tachometer-alt"></i>
-                  <span>Dashboard</span></a>
-          </li>
+        <!-- Nav Item - Dashboard -->
+        <li class="nav-item active">
+            <a class="nav-link" [routerLink]="['/full-pokedex']">
+                <i style="font-size:23px;" class="fas fa-globe"></i>&nbsp;
+                <span>Full Pokedex</span></a>
+        </li>
 
-          <!-- Divider -->
-          <hr class="sidebar-divider">
+        <!-- Divider -->
+        <hr class="sidebar-divider">
+        <li class="nav-item active">
+            <a class="nav-link" [routerLink]="['/user-pokemons']">
+                <i style="font-size:20px;" class="fas fa-trophy"></i>&nbsp;
+                <span>My Collection</span></a>
+        </li>
 
-          <!-- Heading -->
-          <div class="sidebar-heading">
-              Interface
-          </div>
+        <!-- Divider -->
+        <hr class="sidebar-divider">
+        <li class="nav-item active">
+            <a class="nav-link" [routerLink]="['/user-edit']">
+                <i style="font-size:20px;" class="fas fa-wrench"></i>&nbsp;
+                <span>Einstellungen</span></a>
+        </li>
 
-          <!-- Nav Item - Pages Collapse Menu -->
-          <li class="nav-item">
-              <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
-                  aria-expanded="true" aria-controls="collapseTwo">
-                  <i class="fas fa-fw fa-cog"></i>
-                  <span>Components</span>
-              </a>
-              <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-                  <div class="bg-white py-2 collapse-inner rounded">
-                      <h6 class="collapse-header">Custom Components:</h6>
-                      <a class="collapse-item" href="buttons.html">Buttons</a>
-                      <a class="collapse-item" href="cards.html">Cards</a>
-                  </div>
-              </div>
-          </li>
 
-          <!-- Nav Item - Utilities Collapse Menu -->
-          <li class="nav-item">
-              <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-                  aria-expanded="true" aria-controls="collapseUtilities">
-                  <i class="fas fa-fw fa-wrench"></i>
-                  <span>Utilities</span>
-              </a>
-              <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
-                  data-parent="#accordionSidebar">
-                  <div class="bg-white py-2 collapse-inner rounded">
-                      <h6 class="collapse-header">Custom Utilities:</h6>
-                      <a class="collapse-item" href="utilities-color.html">Colors</a>
-                      <a class="collapse-item" href="utilities-border.html">Borders</a>
-                      <a class="collapse-item" href="utilities-animation.html">Animations</a>
-                      <a class="collapse-item" href="utilities-other.html">Other</a>
-                  </div>
-              </div>
-          </li>
 
-          <!-- Divider -->
-          <hr class="sidebar-divider">
+    </ul>
+    <!-- End of Sidebar -->
 
-          <!-- Heading -->
-          <div class="sidebar-heading">
-              Addons
-          </div>
+    <!-- Content Wrapper -->
+    <div id="content-wrapper" class="d-flex flex-column">
 
-          <!-- Nav Item - Pages Collapse Menu -->
-          <li class="nav-item">
-              <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
-                  aria-expanded="true" aria-controls="collapsePages">
-                  <i class="fas fa-fw fa-folder"></i>
-                  <span>Pages</span>
-              </a>
-              <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
-                  <div class="bg-white py-2 collapse-inner rounded">
-                      <h6 class="collapse-header">Login Screens:</h6>
-                      <a class="collapse-item" href="login.html">Login</a>
-                      <a class="collapse-item" href="register.html">Register</a>
-                      <a class="collapse-item" href="forgot-password.html">Forgot Password</a>
-                      <div class="collapse-divider"></div>
-                      <h6 class="collapse-header">Other Pages:</h6>
-                      <a class="collapse-item" href="404.html">404 Page</a>
-                      <a class="collapse-item" href="blank.html">Blank Page</a>
-                  </div>
-              </div>
-          </li>
+        <!-- Main Content -->
+        <div id="content">
 
-          <!-- Nav Item - Charts -->
-          <li class="nav-item">
-              <a class="nav-link" href="charts.html">
-                  <i class="fas fa-fw fa-chart-area"></i>
-                  <span>Charts</span></a>
-          </li>
 
-          <!-- Nav Item - Tables -->
-          <li class="nav-item">
-              <a class="nav-link" href="tables.html">
-                  <i class="fas fa-fw fa-table"></i>
-                  <span>Tables</span></a>
-          </li>
+            <router-outlet></router-outlet>
 
-          <!-- Divider -->
-          <hr class="sidebar-divider d-none d-md-block">
+            <!-- /.container-fluid -->
 
-          <!-- Sidebar Toggler (Sidebar) -->
-          <div class="text-center d-none d-md-inline">
-              <button class="rounded-circle border-0" id="sidebarToggle"></button>
-          </div>
+        </div>
+        <!-- End of Main Content -->
 
-          <!-- Sidebar Message -->
-          <div class="sidebar-card">
-              <img class="sidebar-card-illustration mb-2" src="img/undraw_rocket.svg" alt="">
-              <p class="text-center mb-2"><strong>SB Admin Pro</strong> is packed with premium features, components, and more!</p>
-              <a class="btn btn-success btn-sm" href="https://startbootstrap.com/theme/sb-admin-pro">Upgrade to Pro!</a>
-          </div>
+        <!-- Footer -->
+        <footer class="sticky-footer bg-white">
+            <div class="container my-auto">
+                <div class="copyright text-center my-auto">
+                    <span>Copyright &copy; Your Website 2020</span>
+                </div>
+            </div>
+        </footer>
+        <!-- End of Footer -->
 
-      </ul>
-      <!-- End of Sidebar -->
+    </div>
+    <!-- End of Content Wrapper -->
 
-      <!-- Content Wrapper -->
-      <div id="content-wrapper" class="d-flex flex-column">
+</div>
+<!-- End of Page Wrapper -->
 
-          <!-- Main Content -->
-          <div id="content">
+<!-- Scroll to Top Button-->
+<a class="scroll-to-top rounded" href="#page-top">
+    <i class="fas fa-angle-up"></i>
+</a>
 
-              
-                  <router-outlet></router-outlet>
-              
-              <!-- /.container-fluid -->
-
-          </div>
-          <!-- End of Main Content -->
-
-          <!-- Footer -->
-          <footer class="sticky-footer bg-white">
-              <div class="container my-auto">
-                  <div class="copyright text-center my-auto">
-                      <span>Copyright &copy; Your Website 2020</span>
-                  </div>
-              </div>
-          </footer>
-          <!-- End of Footer -->
-
-      </div>
-      <!-- End of Content Wrapper -->
-
-  </div>
-  <!-- End of Page Wrapper -->
-
-  <!-- Scroll to Top Button-->
-  <a class="scroll-to-top rounded" href="#page-top">
-      <i class="fas fa-angle-up"></i>
-  </a>
-
-  <!-- Logout Modal-->
-  <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-      aria-hidden="true">
-      <div class="modal-dialog" role="document">
-          <div class="modal-content">
-              <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-                  <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">×</span>
-                  </button>
-              </div>
-              <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-              <div class="modal-footer">
-                  <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                  <a class="btn btn-primary" href="login.html">Logout</a>
-              </div>
-          </div>
-      </div>
-  </div>
+<!-- Logout Modal-->
+<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+            </div>
+            <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+                <a class="btn btn-primary" href="login.html">Logout</a>
+            </div>
+        </div>
+    </div>
+</div>
