--- a/pokedex/pokedex-web/src/ngfrontend/src/css/sb-admin-2.css
+++ b/pokedex/pokedex-web/src/ngfrontend/src/css/sb-admin-2.css
@@ -9864,7 +9864,7 @@ a:focus {
 
 .bg-gradient-primary {
   background-color: #4e73df;
-  background-image: linear-gradient(180deg, #4e73df 10%, #224abe 100%);
+  background-image: linear-gradient(180deg,#4e73df 10%,#dc3545 100%)
   background-size: cover;
 }
 
@@ -10418,8 +10418,8 @@ a:focus {
   font-weight: 800;
   padding: 1.5rem 1rem;
   text-align: center;
-  text-transform: uppercase;
-  letter-spacing: 0.05rem;
+  text-transform: none;
+  letter-spacing: 0.15rem;
   z-index: 1;
 }
 
