--- a/pokedex/pokedex-web/src/ngfrontend/src/app/full-pokedex/full-pokedex.component.html
+++ b/pokedex/pokedex-web/src/ngfrontend/src/app/full-pokedex/full-pokedex.component.html
@@ -91,7 +91,7 @@
                                         <tr _ngcontent-nlx-c101="">
                                             <td _ngcontent-nlx-c101="">Type: </td>
                                             <td _ngcontent-nlx-c101=""></td>
-                                            <td _ngcontent-nlx-c101="">{{pokemon.types[0]}}, {{pokemon.types[1]}}</td>
+                                            <td _ngcontent-nlx-c101="">{{pokemon.types[0]}}&nbsp;&nbsp;{{pokemon.types[1]}}</td>
                                         </tr>
                                     </tbody>
                                 </table>
